# meteoalarm

./: .gitignore  .readthedocs.yaml  README.md  manifest.in  pyproject.toml
.github/workflows/: python-publish.yml
docs/: _config.yaml  _config.yml  _toc.yml  changelog.md  cite.md  conf.py  contribute.md  index.md  installation.md  introduction.md  quickstart.md  requirements.txt  warning_maps.ipynb  warnings.md
docs/examples/: advanced-warning-analysis.ipynb  basics.ipynb  warning_maps.ipynb
src/meteoalarm/: meteoalarm.py
tests/: test_meteoalarm.py
