[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteoalarm"
version = "0.1.0"
description = "A Python library for accessing MeteoAlarm weather warnings"
authors = [{name = "Niklas Jordan", email = "hello@niklasjordan.com"}]
license = {file = "LICENSE"}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]

[tool.pytest]
pythonpath = "src"

[project.urls]
Homepage = "https://github.com/NiklasJordan/meteoalarm"
